# HowToLearnNdk

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/chaoliu/app/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/chaoliu/app/: MainActivity.java
app/src/main/java/com/chaoliu/opengl/: Circle.java
app/src/main/java/com/chaoliu/opengl/base/: Line.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: line_vertex_shader.glsl
app/src/main/res/values/: strings.xml
app/src/test/java/com/chaoliu/app/: ExampleUnitTest.java
cmake-demo/demo1/: CMakeLists.txt
cmake-demo/demo2/: CMakeLists.txt  hello.cpp  main.cpp
cmake-demo/demo3/: CMakeLists.txt  main.cpp
cmake-demo/demo3/hello/: CMakeLists.txt  hello.cpp  hello.h
cmake-demo/demo4/: CMakeLists.txt  config.h  config.h.in  main.cpp
cmake-demo/demo4/hello/: CMakeLists.txt  hello.cpp
cmake-demo/demo5/: CMakeLists.txt  main.cpp
cmake-demo/demo5/cmath/: Makefile  cmake_install.cmake
cmake-demo/demo6/: CMakeLists.txt  main.cpp
cmake-demo/demo7/: CMakeLists.txt  config.h  config.h.in  main.cpp
cmake-demo/demo8/: CMakeLists.txt  config.h  config.h.in  main.cpp
cmake-demo/demo8/cmath/: CMakeLists.txt
demo/: build.gradle
demo/src/main/: AndroidManifest.xml
demo/src/main/java/com/glumes/openglbasicshape/base/: BaseToolbarActivity.kt
demo/src/main/res/layout/: activity_bezier.xml
demo1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello.cpp  helloBin
jniapp/: CMakeCache.txt  CMakeLists.txt  build.gradle
jniapp/src/main/: AndroidManifest.xml
jniapp/src/main/java/com/chaoliu/jniapp/: NativeBitmap.java  NativeLib.java  NativeThread.java
jniapp/src/main/java/com/chaoliu/jniapp/exception/: ExceptionOps.java
jniapp/src/main/java/com/chaoliu/jniapp/model/: Animal.java  Cat.java
jniapp/src/main/java/com/chaoliu/jniapp/ui/: MainActivity.java
jniapp/src/main/java/com/chaoliu/jniapp/utils/: LogUtil.java  LogUtil.kt
jniapp/src/main/jni/: native-lib.c
jniapp/src/main/jni/bitmap/: bitmapops.cpp  bitmapops.h
jniapp/src/main/jni/thread/: jvmthread.cpp  jvmthread.h
jniapp/src/main/jni/util/: logutil.h
opengl/: build.gradle
opengl/src/main/: AndroidManifest.xml
opengl/src/main/java/com/chaoliu/opengl/core/: BaseGLRenderer.java  BaseGLSurfaceView.java  GLRenderer.java
opengl/src/main/java/com/chaoliu/opengl/util/: Constants.java  LogUtil.java  OpenglUtil.java  ShaderHelper.java  TextResourceReader.java  VertexArray.java
